--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="about.html">O Robotovi</a></li>
                     <li><a href="features.html">Funkce</a></li>
                     <li><a href="Gallery.html">Galerie</a></li>
-                    <li><a href="contact.html">Kontakt</a></li>
+                    <li><a href="./contact">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
